# AI-Trade-link

./: index.html  package-lock.json  package.json
Nagpur AI Telemedicine/: .gitignore  README.md
Nagpur AI Telemedicine/server/: .env
Nagpur AI Telemedicine/src/: App.jsx  main.jsx
Nagpur AI Telemedicine/src/components/: Navbar.jsx  ProviderCard.jsx  SymptomChecker.jsx
Nagpur AI Telemedicine/src/context/: AuthContext.jsx
Nagpur AI Telemedicine/src/services/: ai.js  api.js
Rural Ai prototype/: .coverage  .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  run_tests.bat  run_tests.sh  start_dev.py
Rural Ai prototype/.hypothesis/constants/: 73c44fd05c2c252f  818e8a21f9c7ff51  917de321080010ca
Rural Ai prototype/.hypothesis/tmp/: tmp_azkjno3  tmpb824r3et  tmph_8b7vbw  tmpk2fho9_z  tmpp0nyhy87
Rural Ai prototype/.kiro/settings/: mcp.json
Rural Ai prototype/.kiro/specs/sarvasahay-platform/: design.md  requirements.md  tasks.md
Rural Ai prototype/.kiro/steering/: product.md  structure.md  tech.md
Rural Ai prototype/api/routes/: eligibility_routes.py  health_routes.py  profile_routes.py
Rural Ai prototype/diagrams/: sarvasahay_architecture.py  sarvasahay_deployment.py  sarvasahay_detailed_architecture.py  simple_serverless.py
Rural Ai prototype/infrastructure/docker/: Dockerfile
Rural Ai prototype/sarvasahay_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Rural Ai prototype/services/: __init__.py  eligibility_engine.py  profile_service.py
Rural Ai prototype/shared/: __init__.py
Rural Ai prototype/shared/config/: settings.py
Rural Ai prototype/shared/models/: __init__.py  government_scheme.py  user_profile.py
Rural Ai prototype/tests/: __init__.py  conftest.py
Rural Ai prototype/tests/integration/: test_government_api_integration.py
Rural Ai prototype/tests/property/: test_eligibility_properties.py
Rural Ai prototype/tests/unit/: test_eligibility_engine.py  test_profile_service.py
data weaver project/: Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
data weaver project/.kiro/hooks/: code-quality-analyzer.kiro.hook
data weaver project/.kiro/specs/pigeon-crypto-dashboard/: design.md  requirements.md  tasks.md
data weaver project/backend/: .env.production  .gitignore  jest.config.js  package.json  tsconfig.json
data weaver project/backend/src/services/: cryptoService.test.ts  performanceService.ts  pigeonService.test.ts  userPreferencesService.property.test.ts  userPreferencesService.test.ts
data weaver project/backend/src/types/: index.test.ts  index.ts
data weaver project/backend/src/utils/: dataTransform.property.test.ts  dataTransform.test.ts  dataTransform.ts
data weaver project/backend/src/validation/: index.ts
data weaver project/frontend/: .env.example  vite.config.ts
data weaver project/frontend/src/: App.css
data weaver project/frontend/src/components/: Dashboard.integration.test.tsx  Dashboard.property.test.tsx  Dashboard.realtime.test.tsx  Dashboard.test.tsx  Dashboard.tsx  ErrorDisplay.css  ErrorDisplay.tsx  OfflineMode.tsx
data weaver project/reports/: test-report-2025-12-14T19-35-54-345Z.json
data weaver project/scripts/: build.sh  deploy.sh  test-all.js  verify-integration.js
local trade vendor/: .gitignore  .vercelignore  ADD_ANTHROPIC_KEY.md  BACKEND_DEPLOYMENT_STATUS.md  BACKEND_FIX_SUMMARY.md  CLI_DEPLOYMENT_STEPS.md  CONNECT_RAILWAY_TO_FRONTEND.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_TROUBLESHOOTING.md  DEPLOY_ACTION_PLAN.md  DEPLOY_NOW.md  FINAL_DEPLOYMENT_INSTRUCTIONS.md  FIX_RAILWAY_NOW.md  FREE_TIER_DEPLOYMENT.md  INTEGRATION_TESTING_SUMMARY.md  LOGIN_FIX_SUMMARY.md  MY_CREDENTIALS.md  PERFORMANCE_OPTIMIZATION.md  QUICK_DEPLOY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICK_START.md  RAILWAY_TROUBLESHOOTING.md  README.md  READY_TO_DEPLOY.md  VERCEL_DEPLOYMENT.md  YOUR_DEPLOYMENT_GUIDE.md  add-env-vars.bat  connect-frontend-to-railway.bat  deploy-vercel.bat  deploy-vercel.sh  package-lock.json  package.json  railway.json  vercel.json
local trade vendor/.kiro/specs/ai-price-negotiation/: requirements.md
local trade vendor/.kiro/specs/tradelink-marketplace/: design.md  requirements.md  tasks.md
local trade vendor/api/: [...path].ts  index.ts
local trade vendor/backend/: .env.example  jest.config.js  nixpacks.toml  nodemon.json  package.json  test-auth.js  tsconfig.json  vercel.json
local trade vendor/backend/prisma/: schema.prisma
local trade vendor/backend/src/: index.test.ts  index.ts
local trade vendor/backend/src/__tests__/: integration.test.ts
local trade vendor/backend/src/config/: database.ts  redis.ts
local trade vendor/backend/src/middleware/: auth.ts
local trade vendor/backend/src/routes/: auth.ts  chat.ts  negotiations.ts  pricing.ts  products.ts  transactions.ts  vendors.ts
local trade vendor/backend/src/services/: cacheService.ts  chatHandler.ts  imageOptimizationService.ts  index.ts  locationService.ts  messageService.ts  multilingualService.ts  negotiationService.ts  priceAnalysisService.ts  productService.ts  transactionService.ts  translationService.ts  userService.ts  vendorService.ts
local trade vendor/backend/src/test/: setup.ts
local trade vendor/backend/src/types/: index.ts
local trade vendor/backend/src/utils/: geospatial.ts  queryOptimization.ts  validation.ts
local trade vendor/frontend/: .env.example  MOBILE_FEATURES.md  index.html  package.json  tailwind.config.js  vercel.json  vite.config.ts
local trade vendor/frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
local trade vendor/frontend/src/__tests__/: integration.test.tsx
local trade vendor/frontend/src/components/: AISuggestionCard.tsx  CameraCapture.tsx  ChatList.tsx  ChatWindow.tsx  CounterOfferSuggestion.tsx  ErrorBoundary.tsx  (+24 more)
local trade vendor/scripts/: diagnose-deployment.js  fix-deployment-issues.js  verify-setup.js
src/: App.css  App.jsx  index.css
(+40 files in other folders)
